# ASL-hdbscan

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  benchmark_euclidean.csv  environment.yaml  hdbscan_reference.py  helloworld.cpp  run_comparison.sh  run_coredistance_benchmark.sh  run_distance_benchmark.sh  run_hdbscan.sh  run_hdbscan_levels.sh  run_likwid.sh  run_likwid_levels.sh
cmake/: GetGFlags.cmake  GetGTest.cmake  GetLikwid.cmake
data/: README.md  clusterable_data.csv  data_set_large.csv  data_set_medium.csv  data_set_noisy.csv  data_set_small.csv  large_50000_64_labels.csv  make_data.py  small_1000_32.csv  small_1000_32_labels.csv
data/large_50000_64/: README.md  large_50000_64_compact_hierarchy.csv  large_50000_64_outlier_scores.csv  large_50000_64_partition.csv  large_50000_64_tree.csv
data/unit_tests/: example_high_dim_10000_32.csv  example_high_dim_10000_32_compact_hierarchy.csv  example_high_dim_10000_32_labels.csv  example_high_dim_10000_32_outlier_scores.csv  example_high_dim_10000_32_partition.csv  example_high_dim_10000_32_tree.csv
distance_benchmark/: main.cpp
likwid_output/: likwid_dist_unroll4.txt  likwid_dist_vectorise_fma.txt  likwid_mst_bitset_nocalc.txt  likwid_mst_bitset_nocalc_avx.txt  likwid_mst_bitset_nocalc_avx_unroll_4.txt
plotting/: plot_comparison.py  plot_distance_benchmark.py  plot_distance_benchmark_2x3.py  plot_measurements.py  plot_mst_benchmark.py  plot_reference.py  plot_speedup.py  plot_stacked_speedup.py  requirements.txt  roofline.py
python_HDBSCAN_benchmark/: README.md  python_HDBSCAN_benchmark.py  requirements.txt
results/distances/: benchmark_core_distance.csv  benchmark_core_distance_blocking.csv  benchmark_cosine.csv  benchmark_euclidean.csv  benchmark_manhattan.csv  benchmark_pearson.csv  benchmark_supremum.csv
results/likwid/: likwid_baseline.txt  likwid_dist_full.txt  likwid_dist_no_optimization.txt  likwid_dist_symmetry.txt  likwid_dist_unroll2.txt  likwid_dist_vectorise.txt  likwid_mst_bitset_nocalc_avx_unroll_2.txt  likwid_mst_bitset_unroll.txt  likwid_mst_bitset_unroll_nocalc.txt
results/mst/: results_10k.csv
results/opt_level/: measurements_runner_O0.txt  measurements_runner_O0_dim_32.txt  measurements_runner_O3_dim_32.txt  measurements_runner_bitset_nocalc.txt  measurements_runner_bitset_nocalc_avx.txt  measurements_runner_bitset_nocalc_avx_unroll_2.txt  measurements_runner_bitset_nocalc_avx_unroll_4.txt  measurements_runner_bitset_unroll.txt  measurements_runner_bitset_unroll_nocalc.txt  measurements_runner_full.txt  measurements_runner_no_optimization.txt  measurements_runner_symmetry.txt  measurements_runner_symmetry_dim_32.txt  measurements_runner_unroll2.txt  measurements_runner_unroll2_dim_32.txt  measurements_runner_unroll4.txt  measurements_runner_unroll4_dim_32.txt  measurements_runner_vectorise.txt  measurements_runner_vectorise_dim_32.txt  measurements_runner_vectorise_fma.txt
run_files/: run_distance_benchmark.sh  run_hdbscan.sh
src/: benchmark_cd.cpp  benchmark_mst.cpp  example.cpp  example.h  main.cpp
src/common/: list.cpp  map.cpp  ordered_set.cpp  set.cpp  vector.cpp
src/hdbscan/: HDBSCAN_io.cpp  HDBSCAN_star.cpp  _C_undirected_graph.cpp  calculate_core_distances.cpp  cluster.cpp  constraint.cpp  construct_mst.cpp  hierarchy_cluster.cpp  outlier_score.cpp  prominent_clusters.cpp  propagate_tree.cpp  runner.cpp  undirected_graph.cpp
src/include/benchmark/: benchmark_cd.h  benchmark_mst.h  tsc_x86.h
src/include/common/: bitset.h  list.h  map.h  memory.h  ordered_set.h  quicksort.h  set.h  vector.h  vector_reductions.h
src/include/distances/: cosine_similarity.h  distance_calculator.h  distances.h  euclidean_distance.h  euclidian_distance.h  manhattan_distance.h  pearson_correlation.h  supremum_distance.h
src/include/hdbscan/: HDBSCAN_star.h  HDBSCAN_star_runner.h  _C_undirected_graph.h  cluster.h  constraint.h  outlier_score.h  undirected_graph.h
tests/: main.cpp
tests/common/: bitset.cpp  list.cpp  map.cpp  ordered_set.cpp  quicksort.cpp  set.cpp  vector.cpp  vector_reductions.cpp
tests/data/: example_data_set.csv  read_test.csv
tests/data/example_results/: README.md  example_data_set_compact_hierarchy.csv  example_data_set_outlier_scores.csv  example_data_set_partition.csv  example_data_set_tree.csv
tests/distances/: cosine_similarity.cpp  euclidean_distance.cpp  euclidian_distance.cpp  manhattan_distance.cpp  pearson_correlation.cpp  supremum_distance.cpp
tests/hdbscan/: HDBSCAN_star.cpp  _C_undirected_graph.cpp  cluster.cpp  constraint.cpp  outlier_score.cpp  runner.cpp  undirected_graph.cpp
